src/main/java/mathUtils/compiler/complex/ComplexParser.java
// Generated from C:/Users/User/Desktop/JAVA/Projects/MathUtils/src/main/java/mathUtils/compiler/complex\Complex.g4 by ANTLR 4.8
package mathUtils.compiler.complex;

import mathUtils.calculus.complex.Imaginary;
import mathUtils.calculus.complex.Complex;
import mathUtils.calculus.complex.ComplexMath;
import mathUtils.calculus.complex.ComplexFunction;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ComplexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, NUMBER=14, PLUS=15, MINUS=16, TIMES=17, 
		DIVIDE=18, POWER=19, LEFT=20, RIGHT=21, COMA=22, WS=23;
	public static final int
		RULE_parseNumber = 0, RULE_parseFunction = 1, RULE_addition = 2, RULE_multiplication = 3, 
		RULE_power = 4, RULE_function = 5, RULE_atom = 6, RULE_term = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"parseNumber", "parseFunction", "addition", "multiplication", "power", 
			"function", "atom", "term"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'sin'", "'cos'", "'tan'", "'cis'", "'sqrt'", "'log'", "'ln'", 
			"'Re'", "'Im'", "'z'", "'i'", "'e'", "'pi'", null, "'+'", "'-'", "'*'", 
			"'/'", "'^'", "'('", "')'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "NUMBER", "PLUS", "MINUS", "TIMES", "DIVIDE", "POWER", "LEFT", 
			"RIGHT", "COMA", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Complex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ComplexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseNumberContext extends ParserRuleContext {
		public Number n;
		public AdditionContext a;
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public ParseNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseNumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).enterParseNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).exitParseNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComplexVisitor ) return ((ComplexVisitor<? extends T>)visitor).visitParseNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseNumberContext parseNumber() throws RecognitionException {
		ParseNumberContext _localctx = new ParseNumberContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parseNumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			((ParseNumberContext)_localctx).a = addition();
			((ParseNumberContext)_localctx).n =  ((ParseNumberContext)_localctx).a.f.z(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseFunctionContext extends ParserRuleContext {
		public ComplexFunction f;
		public AdditionContext a;
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public ParseFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).enterParseFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).exitParseFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComplexVisitor ) return ((ComplexVisitor<? extends T>)visitor).visitParseFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseFunctionContext parseFunction() throws RecognitionException {
		ParseFunctionContext _localctx = new ParseFunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parseFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19);
			((ParseFunctionContext)_localctx).a = addition();
			((ParseFunctionContext)_localctx).f =  ((ParseFunctionContext)_localctx).a.f;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditionContext extends ParserRuleContext {
		public ComplexFunction f;
		public MultiplicationContext m1;
		public MultiplicationContext m2;
		public List<MultiplicationContext> multiplication() {
			return getRuleContexts(MultiplicationContext.class);
		}
		public MultiplicationContext multiplication(int i) {
			return getRuleContext(MultiplicationContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(ComplexParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(ComplexParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(ComplexParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(ComplexParser.MINUS, i);
		}
		public AdditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).enterAddition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).exitAddition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComplexVisitor ) return ((ComplexVisitor<? extends T>)visitor).visitAddition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdditionContext addition() throws RecognitionException {
		AdditionContext _localctx = new AdditionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_addition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			((AdditionContext)_localctx).m1 = multiplication();
			((AdditionContext)_localctx).f =  z ->   ((AdditionContext)_localctx).m1.f.z(z);
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				setState(32);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLUS:
					{
					setState(24);
					match(PLUS);
					setState(25);
					((AdditionContext)_localctx).m2 = multiplication();

					             ComplexFunction df = _localctx.f;
					             ((AdditionContext)_localctx).f =  z -> ComplexMath.add( df.z(z), ((AdditionContext)_localctx).m2.f.z(z) );
					         
					}
					break;
				case MINUS:
					{
					setState(28);
					match(MINUS);
					setState(29);
					((AdditionContext)_localctx).m2 = multiplication();

					              ComplexFunction df = _localctx.f;
					              ((AdditionContext)_localctx).f =  z -> ComplexMath.subtract( df.z(z), ((AdditionContext)_localctx).m2.f.z(z) );
					         
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplicationContext extends ParserRuleContext {
		public ComplexFunction f;
		public PowerContext f1;
		public PowerContext f2;
		public List<PowerContext> power() {
			return getRuleContexts(PowerContext.class);
		}
		public PowerContext power(int i) {
			return getRuleContext(PowerContext.class,i);
		}
		public List<TerminalNode> TIMES() { return getTokens(ComplexParser.TIMES); }
		public TerminalNode TIMES(int i) {
			return getToken(ComplexParser.TIMES, i);
		}
		public List<TerminalNode> DIVIDE() { return getTokens(ComplexParser.DIVIDE); }
		public TerminalNode DIVIDE(int i) {
			return getToken(ComplexParser.DIVIDE, i);
		}
		public MultiplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplication; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).enterMultiplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).exitMultiplication(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComplexVisitor ) return ((ComplexVisitor<? extends T>)visitor).visitMultiplication(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplicationContext multiplication() throws RecognitionException {
		MultiplicationContext _localctx = new MultiplicationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_multiplication);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			((MultiplicationContext)_localctx).f1 = power();
			((MultiplicationContext)_localctx).f =  z ->   ((MultiplicationContext)_localctx).f1.f.z(z);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TIMES || _la==DIVIDE) {
				{
				setState(47);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TIMES:
					{
					setState(39);
					match(TIMES);
					setState(40);
					((MultiplicationContext)_localctx).f2 = power();

					            ComplexFunction df = _localctx.f;
					            ((MultiplicationContext)_localctx).f =  z -> ComplexMath.multiply( df.z(z), ((MultiplicationContext)_localctx).f2.f.z(z) );
					         
					}
					break;
				case DIVIDE:
					{
					setState(43);
					match(DIVIDE);
					setState(44);
					((MultiplicationContext)_localctx).f2 = power();

					               ComplexFunction df = _localctx.f;
					               ((MultiplicationContext)_localctx).f =  z -> ComplexMath.divide( df.z(z), ((MultiplicationContext)_localctx).f2.f.z(z) );
					         
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PowerContext extends ParserRuleContext {
		public ComplexFunction f;
		public FunctionContext f1;
		public FunctionContext f2;
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<TerminalNode> POWER() { return getTokens(ComplexParser.POWER); }
		public TerminalNode POWER(int i) {
			return getToken(ComplexParser.POWER, i);
		}
		public PowerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_power; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).enterPower(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).exitPower(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComplexVisitor ) return ((ComplexVisitor<? extends T>)visitor).visitPower(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PowerContext power() throws RecognitionException {
		PowerContext _localctx = new PowerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_power);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			((PowerContext)_localctx).f1 = function();
			((PowerContext)_localctx).f =  z ->   ((PowerContext)_localctx).f1.f.z(z);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==POWER) {
				{
				{
				setState(54);
				match(POWER);
				setState(55);
				((PowerContext)_localctx).f2 = function();

				                ComplexFunction df = _localctx.f;
				                ((PowerContext)_localctx).f =  z -> ComplexMath.pow( df.z(z), ((PowerContext)_localctx).f2.f.z(z) );
				         
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public ComplexFunction f;
		public AtomContext x;
		public FunctionContext a;
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComplexVisitor ) return ((ComplexVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				((FunctionContext)_localctx).x = atom();
				 ((FunctionContext)_localctx).f =  ((FunctionContext)_localctx).x.f; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(T__0);
				setState(67);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  ComplexMath.sin(((FunctionContext)_localctx).a.f.z(z)); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				match(T__1);
				setState(71);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  ComplexMath.cos(((FunctionContext)_localctx).a.f.z(z)); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				match(T__2);
				setState(75);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  ComplexMath.tan(((FunctionContext)_localctx).a.f.z(z)); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				match(T__3);
				setState(79);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  ComplexMath.cis(((FunctionContext)_localctx).a.f.z(z)); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				match(T__4);
				setState(83);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  ComplexMath.sqrt(((FunctionContext)_localctx).a.f.z(z)); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(86);
				match(T__5);
				setState(87);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  ComplexMath.log(((FunctionContext)_localctx).a.f.z(z), 10); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(90);
				match(T__6);
				setState(91);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  ComplexMath.ln(((FunctionContext)_localctx).a.f.z(z)); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(94);
				match(T__4);
				setState(95);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  ComplexMath.sqrt(((FunctionContext)_localctx).a.f.z(z)); 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(98);
				match(T__7);
				setState(99);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  new Complex(((FunctionContext)_localctx).a.f.z(z)).real; 
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(102);
				match(T__8);
				setState(103);
				((FunctionContext)_localctx).a = function();
				 ((FunctionContext)_localctx).f =  z ->  new Complex(((FunctionContext)_localctx).a.f.z(z)).imaginary; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public ComplexFunction f;
		public TermContext t;
		public AdditionContext exp;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode LEFT() { return getToken(ComplexParser.LEFT, 0); }
		public TerminalNode RIGHT() { return getToken(ComplexParser.RIGHT, 0); }
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComplexVisitor ) return ((ComplexVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atom);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case NUMBER:
			case PLUS:
			case MINUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				((AtomContext)_localctx).t = term();
				((AtomContext)_localctx).f =  ((AtomContext)_localctx).t.f;
				}
				break;
			case LEFT:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(LEFT);
				setState(112);
				((AtomContext)_localctx).exp = addition();
				((AtomContext)_localctx).f =  z ->  ((AtomContext)_localctx).exp.f.z(z);
				setState(114);
				match(RIGHT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public ComplexFunction f;
		public Token n;
		public AdditionContext exp;
		public TerminalNode PLUS() { return getToken(ComplexParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(ComplexParser.MINUS, 0); }
		public TerminalNode NUMBER() { return getToken(ComplexParser.NUMBER, 0); }
		public TerminalNode LEFT() { return getToken(ComplexParser.LEFT, 0); }
		public TerminalNode RIGHT() { return getToken(ComplexParser.RIGHT, 0); }
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ComplexListener ) ((ComplexListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ComplexVisitor ) return ((ComplexVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_term);
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(T__9);
				((TermContext)_localctx).f =  z -> z;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLUS:
					{
					setState(120);
					match(PLUS);
					setState(121);
					((TermContext)_localctx).n = match(NUMBER);
					((TermContext)_localctx).f =  z -> Double.parseDouble((((TermContext)_localctx).n!=null?((TermContext)_localctx).n.getText():null));
					}
					break;
				case MINUS:
					{
					setState(123);
					match(MINUS);
					setState(124);
					((TermContext)_localctx).n = match(NUMBER);
					((TermContext)_localctx).f =  z -> -Double.parseDouble((((TermContext)_localctx).n!=null?((TermContext)_localctx).n.getText():null));
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				((TermContext)_localctx).n = match(NUMBER);
				((TermContext)_localctx).f =  z ->  Double.parseDouble((((TermContext)_localctx).n!=null?((TermContext)_localctx).n.getText():null));
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(138);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLUS:
					{
					setState(130);
					match(PLUS);
					setState(131);
					((TermContext)_localctx).n = match(NUMBER);
					setState(132);
					match(T__10);
					((TermContext)_localctx).f =  z ->  new Imaginary( Double.parseDouble((((TermContext)_localctx).n!=null?((TermContext)_localctx).n.getText():null)) );
					}
					break;
				case MINUS:
					{
					setState(134);
					match(MINUS);
					setState(135);
					((TermContext)_localctx).n = match(NUMBER);
					setState(136);
					match(T__10);
					((TermContext)_localctx).f =  z ->  new Imaginary( -Double.parseDouble((((TermContext)_localctx).n!=null?((TermContext)_localctx).n.getText():null)) );
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				((TermContext)_localctx).n = match(NUMBER);
				setState(141);
				match(T__10);
				((TermContext)_localctx).f =  z ->  new Imaginary( Double.parseDouble((((TermContext)_localctx).n!=null?((TermContext)_localctx).n.getText():null)) );
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(155);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLUS:
					{
					setState(143);
					match(PLUS);
					setState(144);
					match(LEFT);
					setState(145);
					((TermContext)_localctx).exp = addition();
					((TermContext)_localctx).f =  z ->  ((TermContext)_localctx).exp.f.z(z);
					setState(147);
					match(RIGHT);
					}
					break;
				case MINUS:
					{
					setState(149);
					match(MINUS);
					setState(150);
					match(LEFT);
					setState(151);
					((TermContext)_localctx).exp = addition();
					((TermContext)_localctx).f =  z ->  ComplexMath.subtract(0, ((TermContext)_localctx).exp.f.z(z));
					setState(153);
					match(RIGHT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(157);
				match(T__10);
				((TermContext)_localctx).f =  z -> Imaginary.I;
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(159);
				match(T__11);
				((TermContext)_localctx).f =  z -> Math.E;
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(161);
				match(T__12);
				((TermContext)_localctx).f =  z -> Math.PI;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}